# ChangeLog for games-fps/americas-army
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/americas-army/Attic/ChangeLog,v 1.9 2004/03/13 23:45:02 wolf31o2 Exp $

  13 Mar 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  americas-army-200a.ebuild:
  Added opengl USE to allow for dedicated server only installs. Removed esound
  from DEPEND. Closing bug #44605.

  27 Feb 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  americas-army-200a.ebuild:
  Revising .desktop entry.

  10 Feb 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  americas-army-200a.ebuild:
  Fixing directory location on mirrors.

  08 Feb 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  americas-army-200.ebuild, americas-army-200a.ebuild:
  Removing 2.0.0 version and updating 2.0.0a to fix broken mirrors. Closing bug
  #40598.

*americas-army-200a (09 Jan 2004)

  09 Jan 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  americas-army-190.ebuild, americas-army-200a.ebuild:
  Updated to 2.0.0a.  Closing Bug #36674.

*americas-army-200 (28 Nov 2003)

  28 Nov 2003; Chris Gianelloni <wolf31o2@gentoo.org>
  americas-army-170.ebuild, americas-army-200.ebuild:
  Added AA 2.0 as new stable version and removed 1.7 ebuild

  01 Nov 2003; Martin Holzer <mholzer@gentoo.org> americas-army-170.ebuild,
  americas-army-190.ebuild:
  adding RESTRICT="nomirror". Closes #32465.

  27 Aug 2003; Chris Gianelloni <wolf31o2@gentoo.org>
  americas-army-170.ebuild, americas-army-190.ebuild:
  Added esound dependency.  Closes bug #27320.

*americas-army-190 (25 Aug 2003)

  25 Aug 2003; Chris Gianelloni <wolf31o2@gentoo.org>
  americas-army-190.ebuild:
  Updated to newest version and setting it as stable. I will be removing the
  older version in one week, since it will no longer be valid. I am also working
  on a version of this with dedicated server support, since the dedicated server
  is now shipped with the game.
