@@ -1,6 +1,11 @@
 # ChangeLog for games-fps/americas-army
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/americas-army/Attic/ChangeLog,v 1.9 2004/03/13 23:45:02 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/americas-army/Attic/ChangeLog,v 1.10 2004/04/02 03:53:27 wolf31o2 Exp $
+
+  01 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  americas-army-200a.ebuild:
+  Updated with patches to fix recent DoS in Unreal engine based games. See bug
+  #44351 for more information.
 
   13 Mar 2004; Chris Gianelloni <wolf31o2@gentoo.org>
   americas-army-200a.ebuild:
